--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
     compile "org.springframework.data:spring-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-actuator"
 
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+    compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.cloud:spring-cloud-starter-oauth2:1.2.2.RELEASE"
+
+
+
     compile "org.springframework.restdocs:spring-restdocs-core"
     compile "com.google.guava:guava:23.5-jre"
 
