--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ dependencies {
     compile "org.springframework.data:spring-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-actuator"
 
-    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+//    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
     compile "org.springframework.boot:spring-boot-starter-security"
-    compile "org.springframework.cloud:spring-cloud-starter-oauth2:1.2.2.RELEASE"
+//    compile "org.springframework.cloud:spring-cloud-starter-oauth2:1.2.2.RELEASE"
 
 
 
