--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
 //    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
     compile "org.springframework.boot:spring-boot-starter-security"
+    compile 'com.paypal.sdk:rest-api-sdk:+'
 //    compile "org.springframework.cloud:spring-cloud-starter-oauth2:1.2.2.RELEASE"
 
 
